# gaussianfft

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamlfmt.yml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  Makefile  Pipfile  README  README.md  SECURITY.md  bootstrap.sh  compose.yaml  conanfile.py  meson.build  mise.toml  nrlib.py  pyproject.toml  requirements.txt  setup.py  source_files.txt  utils.py
_gaussianfft-stubs/: __init__.pyi
boost/: any.hpp  concept_archetype.hpp  contract_macro.hpp  cregex.hpp  cstdint.hpp  foreach.hpp  lexical_cast.hpp  local_function.hpp  multi_array.hpp  none.hpp  progress.hpp  rational.hpp  regex.h  regex.hpp  regex_fwd.hpp  scope_exit.hpp  type_index.hpp
build-packages/arm-performance-libraries/: hatch_build.py  pyproject.toml
build-packages/arm-performance-libraries/arm_performance_libraries/: __init__.py  __main__.py
build-packages/arm-performance-libraries/plugins/gather-files/: pyproject.toml
build-packages/arm-performance-libraries/plugins/gather-files/gather_files/: __init__.py  state.py
build-packages/arm-performance-libraries/scripts/: build.sh  common.sh  fetch.sh  prepare.sh
cmake/: boost.cmake  fftw.cmake  mkl-fftw.cmake  python-venv.cmake  utilities.cmake  variables.cmake
examples/: analyze_empirical_variograms.py  simulate_2d_cube.py  validate_2d_simulation.py  validate_3d_simulation.py
gaussianfft/: __init__.py  __init__.pyi
libs/: maintainers.txt
notebooks/: README.md  covariance-matrix.ipynb  covariance-matrix.py  documentation.ipynb  documentation.py  effective-range.ipynb  effective-range.py  empirical-variogram.ipynb  empirical-variogram.py  padding-verification.ipynb  padding-verification.py  range-padding-analysis.py  (+16 more)
src/nrlib/: CMakeLists.txt  pchheader.cpp  pchheader.hpp
src/nrlib/eclipsegrid/: eclipsecarfin.cpp  eclipsecarfin.hpp  eclipsecarfingroup.cpp  eclipsecarfingroup.hpp  eclipseeditnnc.cpp  eclipseeditnnc.hpp  eclipsefaceindexer.cpp  eclipsefaceindexer.hpp  eclipsefault.cpp  eclipsefault.hpp  eclipsegeometry.cpp  eclipsegeometry.hpp  eclipsegrid.cpp  eclipsegrid.hpp  eclipsetools.cpp  eclipsetools.hpp  eclipsetransmult.cpp  eclipsetransmult.hpp  module.mk
src/nrlib/exception/: exception.hpp  module.mk
src/nrlib/fft/: fft.cpp  fft.hpp  fftgrid2d.cpp  fftgrid2d.hpp  fftgrid3d.cpp  fftgrid3d.hpp  module.mk
src/nrlib/fft/backup/: fft.hpp  fftgrid2d.cpp  fftgrid2d.hpp  fftgrid3d.hpp
src/nrlib/fft/experimentation/: fft.cpp  fft.hpp  fftgrid2d.cpp  fftgrid2d.hpp  fftgrid3d.cpp  fftgrid3d.hpp
src/nrlib/flens/: module.mk  nrlib_flens.cpp  nrlib_flens.hpp
src/nrlib/geometry/: bilinearsurface.cpp  bilinearsurface.hpp  box.cpp  box.hpp  interpolation.cpp  interpolation.hpp  line.cpp  line.hpp  module.mk  plane.cpp  plane.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  transformation.cpp  transformation.hpp  triangle.cpp  triangle.hpp
src/nrlib/geometry/unittests/: box_test.cpp  interpolation_test.cpp  line_test.cpp
src/nrlib/grid/: grid.hpp  grid2d.hpp  grid2dgeneral.hpp  grid4d.hpp  grid5d.hpp
src/nrlib/iotools/: bigfile.cpp  bigfile.hpp  boost-filesystem.hpp  fileio.cpp  fileio.hpp  logkit.cpp  logkit.hpp  logstream.cpp  logstream.hpp  module.mk  serialize.cpp  serialize.hpp  stringtools.cpp  stringtools.hpp  tabularfile.cpp  tabularfile.hpp
src/nrlib/iotools/unittests/: bigfile_test.cpp  fileio_binaryreadwrite_test.cpp  fileio_parsefrombuffer_test.cpp  fileio_writetobuffer_test.cpp  stringtools_test.cpp
src/nrlib/math/: constants.cpp  constants.hpp  mathutility.hpp  module.mk
src/nrlib/pointset/: module.mk  pointset.cpp  pointset.hpp
src/nrlib/random/: beta.cpp  beta.hpp  betawithendmass.cpp  betawithendmass.hpp  binomial.cpp  binomial.hpp  chisquared.cpp  chisquared.hpp  dSFMT-common.h  dSFMT-params.h  dSFMT-params19937.h  dSFMT.cpp  dSFMT.h  delta.cpp  delta.hpp  distribution.hpp  fractal.cpp  fractal.hpp  functions.cpp  functions.hpp  gamma.cpp  gamma.hpp  generaldiscrete.cpp  generaldiscrete.hpp  lognormal.cpp  lognormal.hpp  module.mk  normal.cpp  normal.hpp  poisson.cpp  poisson.hpp  random.cpp  random.hpp  randomgenerator.cpp  randomgenerator.hpp  splituniform.cpp  splituniform.hpp  triangular.cpp  triangular.hpp  uniform.cpp  (+1 more)
src/nrlib/segy/: commonheaders.cpp  commonheaders.hpp  module.mk  segy.cpp  segy.hpp  segygeometry.cpp  segygeometry.hpp  segytrace.cpp  segytrace.hpp  traceheader.cpp  traceheader.hpp
src/nrlib/segy/unittests/: segy_findformat_test.cpp  segygeometry_line_test.cpp  segygeometry_test.cpp  segyio_test.cpp
src/nrlib/statistics/: continuouskrigingdata2d.cpp  continuouskrigingdata2d.hpp  kriging.cpp  kriging.hpp  krigingdata2d.hpp  module.mk  multinormal.cpp  multinormal.hpp  nodalkrigingdata2d.cpp  nodalkrigingdata2d.hpp  posteriormultinormal.cpp  posteriormultinormal.hpp  statistics.hpp
src/nrlib/statistics/unittests/: kriging_test.cpp
src/nrlib/stormgrid/: module.mk  stormcontgrid.cpp  stormcontgrid.hpp  stormfaciesgrid.cpp  stormfaciesgrid.hpp
src/nrlib/surface/: module.mk  regularsurface.hpp  regularsurfacerotated.hpp  surface.hpp  surfaceio.cpp  surfaceio.hpp
src/nrlib/tinyxml/: module.mk  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
src/nrlib/trend/: module.mk  trend.cpp  trend.hpp  trendkit.cpp  trendkit.hpp  trendstorage.cpp  trendstorage.hpp
src/nrlib/unittests/: util.hpp
src/nrlib/variogram/: covgrid2d.cpp  covgrid2d.hpp  fftcovgrid.cpp  fftcovgrid.hpp  gaussianfield.cpp  gaussianfield.hpp  module.mk  variogram.cpp  variogram.hpp  variogramtypes.cpp  variogramtypes.hpp
src/nrlib/variogram/unittests/: fftcovgrid_test.cpp  gaussianfield_test.cpp  test.cpp
src/nrlib/volume/: volume.cpp  volume.hpp
src/nrlib/wavelet/: module.mk  wavelet.cpp  wavelet.hpp  waveletio.cpp  waveletio.hpp
src/nrlib/well/: laswell.cpp  laswell.hpp  module.mk  norsarwell.cpp  norsarwell.hpp  rmswell.cpp  rmswell.hpp  well.cpp  well.hpp  welloperations.hpp
src/nrlib/well/unittests/: laswell_test.cpp  norsarwell_test.cpp  rmswell_test.cpp
tests/cpp/: CMakeLists.txt  README.md  test_runner.cpp
(+2092 files in other folders)
