[project]
name = "gaussianfft"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
description = "A fast library for simulating Gaussian Random Fields, using the fast Fourier transform"
readme = "README.md"
authors = [
    { name = "Norwegian Computing Center", email = "" },
    { name = "Sindre Nistad", email = "snis@equinor.com" },
]
keywords = [
    "Stochastic simulation",
    "Gaussian random field",
    "FFT",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://equinor.com"
Repository = "https://github.com/equinor/gaussianfft"
Issues = "https://github.com/equinor/gaussianfft/issues"

[project.optional-dependencies]
util = ["scipy"]


[build-system]
requires = [
    "meson-python",

    "mkl-static ; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
    "mkl-devel ; platform_machine == 'x86_64' or platform_machine == 'AMD64'",

    "pybind11[global]",
    "setuptools_scm",
]
build-backend = "mesonpy"

[tool.cibuildwheel]
test-requires = [
    "pytest",
    # There are no pre-compiled wheels available for pypy, so we use a (custom)
    # pure Python implementation of the functions we use from SciPy
    "scipy;platform_python_implementation!='PyPy'",
]
test-command = "pytest {project}/tests"
[tool.cibuildwheel.windows]
# We use delvewheel to ensure _gaussianfft.lib, which is part of the build artefacts,
# is included / imported when _gaussianfft.pyd is imported
before-all = "pip install delvewheel"
repair-wheel-command = "delvewheel repair  --exclude libiomp5md.dll --include-imports --wheel-dir {dest_dir} {wheel}"

[tool.scikit-build.sdist]
include = [
    "gaussianfft/_version.py",  # generated by setuptools-scm
    # Include cached donwloads / compiled dependencies
    "sources",
]
exclude = [
    "venv",
    "build",
    "stage",
    "dist",
    # Related to bootstrapping boost
    "sources/boost/boost_**",
    "sources/**/**.tar.gz",
    # These are artifacts from compiling boost, which we do not want to include
    # in the source distribution
    "sources/boost/*/b2",
    "sources/boost/*/bin.v2",
    "sources/boost/*/project-config.jam*",
    "sources/boost/*/stage",
    "cmake-build-debug",

    ".github",
    "notebooks",
    "doc",
    "tests",
    "examples",
    "compose.yaml",
    "**.dmg",
]

[tool.setuptools_scm]
# `write_to` is deprecated in favor of `version_file`
# However, setuptools_scm droped support for Python 3.7 with version 8
# https://setuptools-scm.readthedocs.io/en/latest/config/#configuration-parameters
write_to = "gaussianfft/_version.py"
# This should only be present on CI
local_scheme = "no-local-version"
