[project]
name = "arm-performance-libraries"
version = "26.01"
description = "ARM Performance Libraries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license-files = ["license_terms/*.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
]

[project.entry-points.pkg_config]
armpl = "arm_performance_libraries.lib.pkgconfig"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

pure_python = false
artifacts = [
#    "lib/*.pc",
#    "lib/*.a",
#    "lib/*.dylib",
#    "*.dylib.*",
]
include = [
    "arm_performance_libraries",
#    "bin",
#    "include",
#    "lib",
#    "!lib/*.dylib.*",
]
exclude = [
    "lib/*.dylib.*",
]


[tool.hatch.build.targets.wheel.shared-data]
"lib" = "lib"
"include" = "include"
"bin" = "bin"

[tool.hatch.build.targets.wheel.hooks.custom]
